--- a/.travis.yaml
+++ b/.travis.yaml
@@ -5,8 +5,7 @@ services:
 env:
   global:
     - SHA=$(git rev-parse HEAD)
-    - CLOUDSDK_CORE_DISABLE_PROMPTS=1 #Disable prompts for user input when these commands run in Travis.
-
+    - CLOUDSDK_CORE_DISABLE_PROMPTS=1
 before_install:
   - openssl aes-256-cbc -K $encrypted_0c35eebf403c_key -iv $encrypted_0c35eebf403c_iv -in gcpserviceaccount.json.enc -out gcpserviceaccount.json -d
   - curl https://sdk.cloud.google.com | bash > /dev/null;
@@ -26,8 +25,7 @@ deploy:
   provider: script
   script: bash ./deploy.sh
   on:
-    branch: master
-    
+    branch: master   
 
 
 
